corrected alignment in hero section

--- a/enobot-client/src/components/HeroSection/HeroSection.scss
+++ b/enobot-client/src/components/HeroSection/HeroSection.scss
@@ -8,39 +8,49 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem;
+  padding: 1rem;
   max-width: 100%;
   width: 100%;
   margin: 0 auto;
-  min-height: 100vh;
+  min-height: 90vh; /* Adjusted height */
 
   @include tablet {
     flex-direction: row;
     justify-content: space-between;
+    align-items: stretch; /* Align items to stretch to fill height */
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    min-height: 100vh; /* Ensure the container has a consistent height */
   }
 
   &__description {
-    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: center;
-    text-align: center;
+    align-items: center; /* Centering for mobile view */
+    text-align: center; /* Centering text for mobile view */
     width: 100%;
     margin-top: 0;
 
     @include tablet {
       flex: 1;
-      align-items: flex-start;
+      justify-content: center; /* Center content vertically */
       text-align: left;
-      padding-right: 2rem;
+      padding-right: 1rem;
       width: auto;
+
+      h1 {
+        width: 100%;
+        text-align: left;
+        margin-top: 0;
+      }
     }
 
     h1 {
       position: relative;
-      padding-bottom: 2rem;
+      padding-bottom: 1rem;
       width: 100%;
+      margin-top: 0;
 
       &::after {
         width: 94%;
@@ -49,12 +59,12 @@
     }
 
     p {
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
     }
 
     &--button {
       align-self: center;
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
     }
   }
 
@@ -64,7 +74,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 2rem;
+    margin-top: 1rem;
 
     @include tablet {
       flex: 1;
